# quadratic-funding-registry

./: Cargo.toml  README.md
pallets/project-registry/: Cargo.toml  README.md
pallets/project-registry/src/: lib.rs  mock.rs  tests.rs
runtime/src/: benchmarks.rs  lib.rs
runtime/src/configs/: mod.rs
