[package]
name = "pallet-project-registry"
version = "0.1.0"
description = "FRAME pallet for managing on-chain funding campaigns"
authors = ["Nikhil Ranjan <nikhil@polkassembly.io>"]
edition = "2021"
license = "MIT-0"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
frame-support = { version = "35.0.0", default-features = false }
frame-system = { version = "35.0.0", default-features = false }
frame-benchmarking = { version = "35.0.0", default-features = false, optional = true }
sp-runtime = { version = "35.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-io = { version = "35.0.0", default-features = false }

[dev-dependencies]
sp-core = { version = "35.0.0" }
sp-io = { version = "35.0.0" }
sp-runtime = { version = "35.0.0" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"] 